# zbg

./: .ocamlformat  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  bfg.opam  dune-project  zbg.opam
.github/workflows/: ci.yml
lib/: cli.ml  dune  extended_string.ml  extended_string.mli  git.ml  git.mli  main.ml  message.ml  message.mli  process.ml  process.mli  prompt.ml  prompt.mli  status.ml
test/: dune  extended_string.ml  status.ml
